--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 	<meta charset="UTF-8" />
 	<link rel="icon" type="image/svg+xml" href="/logo.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="wbw121124's blog" />
+	<!-- 防止 XSS 攻击 -->
+	<meta http-equiv="Content-Security-Policy"
+		content="default-src 'self'; script-src 'self' data:; style-src 'self' 'unsafe-inline' data:; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' data:; worker-src 'self'" />
 	<title>wbw121124's blog</title>
 	<script type="module" src="/src/main.js"></script>
-	<script src="/node_modules/katex/dist/contrib/copy-tex.min.js"></script>
+	<script type="module" src="/src/katex/copy-tex.min.js"></script>
 </head>
 
 <body id="app" class="bg-gray-50 dark:bg-gray-900">
